# banco-dados-cic

./: README.md  gerarTabelas.sql
.github/workflows/: ci.yaml
backend/: Dockerfile  README.md  app.py  compose.yaml  main.py  pyproject.toml  requirements.txt
backend/db/: db.py
backend/interfaces/: interfaces.py
backend/persistence/: avaliacaoRepository.py  cargoRepository.py  databaseManager.py  funcionarioRepository.py  moradorRepository.py  ocorrenciaRepository.py  orgaoPublicoRepository.py  servicoRepository.py  tipoOcorrenciaRepository.py
backend/routers/: avaliacoesRouter.py  cargosRouter.py  funcionarios.py  funcionariosRouter.py  hello_world.py  loginRouter.py  moradoresRouter.py  ocorrenciasRouter.py  orgaosPublicosRouter.py  servicosRouter.py  tiposOcorrenciaRouter.py
backend/service/: avaliacaoService.py  cargoService.py  funcionarioService.py  moradorService.py  ocorrenciaService.py  orgaoPublicoService.py  servicoService.py  tipoOcorrenciaService.py
backend/src/: app.py  schemas.py  settings.py
backend/src/db/: db.py  driver_patch.py  filters.py  models.py
backend/src/interfaces/: interfaces.py
backend/src/routers/: auth.py  hello_world.py  moradores.py
backend/src/service/: sanitize.py  security.py
backend/tests/: conftest.py  test_auth.py  test_hello_world.py  test_moradores.py
backend/tests/test_db/: test_collector.py  test_db_manager.py  test_filter.py  test_models_db_manager.py  test_models_factories.py  test_singleton.py
frontend/: README.md
sql/: funcoes.sql  gerarTabelas.sql  insertDados.sql
(+58 files in other folders)
